<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/colorPrimary"
    tools:context=".ResetPassword">

    <!-- app logo/ name -->
    <RelativeLayout
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_biological"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/questrial"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="35sp" />
    </RelativeLayout>

    <!-- email/msg -->
    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:autofillHints="Email"
            android:fontFamily="@font/questrial"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_pwd_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/questrial"
            android:text="@string/reset_msg"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />
    </RelativeLayout>

    <!-- btn send -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/btn_send"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button_pwdrecovery"
            android:fontFamily="@font/questrial"
            android:text="@string/send"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- login screen -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/questrial"
            android:text="@string/sign_in_here"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>