<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".Document">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <!-- back btn -->
        <Button
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow_back_black_24dp" />
        <!-- activity title -->
        <TextView
            android:id="@+id/tv_home_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/questrial"
            android:text="@string/manual"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </RelativeLayout>

    <!-- download msg -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_pwd_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/questrial"
            android:text="@string/download_msg"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="21sp" />
    </RelativeLayout>

    <!-- download button -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/btn_download"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_button_download"
            android:fontFamily="@font/questrial"
            android:text="@string/export"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </RelativeLayout>

    <!-- deco image -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_spreadsheet"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</LinearLayout>
