<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:weightSum="10"
    tools:context=".Home">

    <!-- activity name -->
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

        <TextView
            android:id="@+id/tv_home_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/questrial"
            android:text="@string/home"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </RelativeLayout>

    <!-- grid layout start -->
    <GridLayout
        android:columnCount="1"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp" >

        <!-- air app card 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/tvoc"
            app:cardBackgroundColor="@color/tem1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="95dp"
                    android:src="@drawable/ic_biological"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|right"
                android:layout_margin="60dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/questrial"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- about card 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/about"
            app:cardBackgroundColor="@color/tem3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_about"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|right"
                android:layout_margin="60dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/questrial"
                    android:text="@string/about"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- user manual card 3 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/manual"
            app:cardBackgroundColor="@color/tem2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_spreadsheet"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|right"
                android:layout_margin="60dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/questrial"
                    android:text="@string/manual"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- logout card 4 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/logout"
            app:cardBackgroundColor="@color/tem4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logout"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|right"
                android:layout_margin="60dp"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UseCompoundDrawables">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/questrial"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
    <!-- grid layout end -->
</LinearLayout>